@@ -20,17 +20,17 @@ class PyQtConfiguration(Hook):
              "previous_configuration_wdgt": 0,
              "previous_variant_for_statistics_page": {}, # dict[page] = variant
              "main_window_size": (0, 0),
-             "add_widget_size": (0, 0),
+             "add_cards_dlg_state": None,
              "edit_widget_size": (0, 0),
-             "plugins_dlg_size": (0, 0),
-             "browse_cards_dlg_size": (0, 0),
-             "browse_cards_dlg_splitter_1": None,
-             "browse_cards_dlg_splitter_2": None,
+             "plugins_dlg_state": None,
+             "browse_cards_dlg_state": None,
+             "browse_cards_dlg_splitter_1_state": None,
+             "browse_cards_dlg_splitter_2_state": None,
              "browse_cards_dlg_table_settings": None,   
              "statistics_dlg_size": (0, 0),
              "configuration_dlg_size": (0, 0),
-             "activate_cards_dlg_size": (0, 0),
-             "activate_cards_dlg_splitter": None,           
+             "activate_cards_dlg_state": None,
+             "activate_cards_dlg_splitter_state": None,           
              "sync_help_shown": False,
              "server_for_sync_as_client": "",
              "port_for_sync_as_client": 8512,
